# ChangeLog for app-misc/mucommander
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Sep 2008; Justin Lecher <justin@j-schmitz.net> +metadata.xml,
  +mucommander-0.8.2.ebuild:
  first commit
