@@ -1,5 +1,4 @@
 AUX mucommander 69 RMD160 b165ed74222f92f50ad8be10e96a04773e3bdc25 SHA1 e6f6dca789ca898d8af723740adce54562e4d8f0 SHA256 a91518a3ce21156ac5598b5ce5b41bae4ebfe0e66814dfbb2fb2cbfb72bd9586
-EBUILD mucommander-0.8.2.ebuild 825 RMD160 ea490ec8ef5a70e6df88cbd7c014067e20eb5c46 SHA1 53c71c9430b3747d623697833299820390c9cde9 SHA256 8ae8cf04f979dc9a7d82b7ac277cad0edca63f8e09b5d4051f0bbc61b8a50fc2
-EBUILD mucommander-0.8.3.ebuild 897 RMD160 a99449bb74c307b3b0680261c53e9fa6dc226bcf SHA1 e8b48bbb9bc07a0a60df88fa1e27ad8aad842e4d SHA256 b673bbcc5eb86815e58f40373c2878142efc75f85bbb2540d88b9923923a8a9f
-MISC ChangeLog 233 RMD160 5974347347a79ecacc39c46e419ae94f2fbece21 SHA1 b41b0c9a5f8bedafeb94c9d439e8242e18281bd7 SHA256 723197253a3629c8c421f6b57e9b5f0ade0f0eed532789a69152d0594596e7d3
+EBUILD mucommander-0.8.3.ebuild 1023 RMD160 a1bc7f1ba97c12da23e28180b556ec93959eba4b SHA1 01601aa9dba4a3fe5366052353e2f90756013ae2 SHA256 ccdb7c6ca1291a64d8ca431a60f0204502c58dc08a79ae7f9849018d9435496a
+MISC ChangeLog 381 RMD160 f2616ffb4db4d29abbf9498aa5e793fd58e665b7 SHA1 32c9d35649e54472b522faaec022332218ffed52 SHA256 fc4853de575822e45d16e32e974d612402e5be216f5e2a06a4c4d9e4733fac58
 MISC metadata.xml 336 RMD160 7b4a4b469bea292b37b0a06f6044dda480fa6684 SHA1 21a31d401c3ab4bc993078d8a011989659699ad9 SHA256 9193c34808659c6289508c3ddb6fdc274fd84b3ef54d22e5ae5c5c12295e6fc6
