@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  25 Nov 2008; justin Lecher <justin@j-schmitz.net>
+  -mucommander-0.8.2.ebuild, mucommander-0.8.3.ebuild:
+  nice ebuild, John Doe is da JAVA man!
+
   21 Sep 2008; Justin Lecher <justin@j-schmitz.net> +metadata.xml,
   +mucommander-0.8.2.ebuild:
   first commit
